tests/snapshots/run_wpt_conformance__onnx_where_float16_4D_tensors_only_broadcast_trueValues_2D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "where.https.any.js",
    "where float16 4D tensors only broadcast trueValues 2D to 4D",
    "onnx",
    "PASS",
)
