tests/snapshots/run_wpt_conformance__onnx_where_float32_0D_scalars.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "where.https.any.js",
    "where float32 0D scalars",
    "onnx",
    "PASS",
)
